# lead_generation_project

./: .env.example  .gitignore  CLAUDE.md  README.md  USER_GUIDE.md  alembic.ini  intent_queries.yaml  needs.yaml  pyproject.toml  scoring.yaml
.github/workflows/: ci.yml
src/leadforge/: __init__.py
src/leadforge/cleaning/: __init__.py  names.py  text.py
src/leadforge/cli/: __init__.py  app.py
src/leadforge/config/: __init__.py  settings.py
src/leadforge/database/: __init__.py  engine.py  migrate.py  repositories.py
src/leadforge/deduplication/: __init__.py
src/leadforge/enrichment/: __init__.py  intent_enrich.py
src/leadforge/models/: __init__.py  base.py  enums.py  orm.py  schemas.py
src/leadforge/scoring/: __init__.py  classify.py  config.py  freshness.py  lead_score.py  need_match.py
src/leadforge/scrapers/: __init__.py  base.py  errors.py  registry.py
src/leadforge/services/: __init__.py  intent_enrich.py  intent_score.py  intent_scrape.py
tests/fixtures/: brave_results.json  ddg_results.html  linkedin_authwall.html  linkedin_post.html  linkedin_post_broken.html  linkedin_post_hiring.html  linkedin_post_slug.html  serper_results.json
tests/unit/: conftest.py  test_cleaning.py  test_cli.py  test_config.py  test_database.py  test_intent_cli.py  test_intent_discover.py  test_intent_enrich.py  test_intent_export.py  test_intent_mapping.py  test_intent_parsing.py  test_intent_score.py  test_intent_scrape_service.py  test_migrations.py  test_registry.py  test_scoring.py  test_scraper_framework.py  test_scraper_utils.py  test_validation.py
(+26 files in other folders)
