[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leadforge"
version = "0.1.0"
description = "Intent-first, zero-cost lead generation platform for digital marketing agencies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "phonenumbers>=8.13",
    "tldextract>=5.1",
    "rapidfuzz>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
leadforge = "leadforge.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Alembic writes these; they follow its own formatting, not ours.
extend-exclude = ["src/leadforge/database/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
